--- a/src/Styles.scss
+++ b/src/Styles.scss
@@ -91,29 +91,12 @@ header {
   }
 }
 
-.filters {
+.filter {
   background-color: white;
   margin: 0 15px;
-  padding: 10px;
-  list-style: none;
   text-align: center;
-  li {
-    display: inline;
-    color: #777;
-    padding: 10px 7px;
-    margin: inherit;
-    border: 1px solid transparent;
-    border-radius: 3px;
-    border-color: rgba(175, 47, 47, 0.2);
-    &:hover {
-      cursor: pointer;
-    }
-    a {
-      color: inherit;
-      text-decoration: none;
-      &:active {
-        background-color: red($color: #000000);
-      }
-    }
+  padding: 16px;
+  button {
+    margin-right: 4px;
   }
 }
